Fix input alignment using box-sizing

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -20,7 +20,9 @@ input {
   width: 100%;
   padding: 10px;
   margin: 10px 0;
+  box-sizing: border-box;
 }
+
 
 button {
   width: 100%;
